1.1.1  March 5, 2012
  - Make sure the Content-Length header is sent for POSTs

1.1.0  March 5, 2012
  - Better error handling
  - Handle requests with no parameters specified
  - Add login_url() example

1.0.0  January 16, 2012
  - Initial public release