@@ -7,11 +7,20 @@ var querystring = require('querystring'),
 
 var api = exports;
 
-api.debug = 1;
+api.PACKAGE = (function() {
+    var json = fs.readFileSync(__dirname + '/../package.json', 'utf8');
+    return JSON.parse(json);
+}());
 
-api.server = {  port: 80,
-                timeout: 0.8 * 1000,
-                headers: { Connection: "Keep-Alive" }
+api.debug = 0;
+
+api.server = {
+    port: 80,
+    timeout: 15 * 1000,
+    headers: {
+        Connection: "Keep-Alive",
+        'User-Agent': 'node-yellowbot/' + api.PACKAGE.version
+    }
 };
 
 var config = {};
