@@ -1,3 +1,5 @@
+  - Send appropriate user-agent with requests
+
 1.1.1  March 5, 2012
   - Make sure the Content-Length header is sent for POSTs
 
